--- a/ImGuiTest.vcxproj
+++ b/ImGuiTest.vcxproj
@@ -154,6 +154,10 @@
     <ClCompile Include="3rdParty\include\imgui\imgui_impl_sdl2.cpp" />
     <ClCompile Include="3rdParty\include\imgui\imgui_tables.cpp" />
     <ClCompile Include="3rdParty\include\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="3rdParty\include\imNodeEditor\crude_json.cpp" />
+    <ClCompile Include="3rdParty\include\imNodeEditor\imgui_canvas.cpp" />
+    <ClCompile Include="3rdParty\include\imNodeEditor\imgui_node_editor.cpp" />
+    <ClCompile Include="3rdParty\include\imNodeEditor\imgui_node_editor_api.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NodeEditor.cpp" />
